--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -31,7 +31,7 @@ Research surrounding the psychology of rhythmic perception is grounded within th
 What follows is a brief overview of SMS. Critical terminology is defined in \ref{SMSTerms}, followed by a primer of available tap test software in \ref{ttsw}. A framework for the current work is established through discoveries illuminated by prior SMS research in \ref{SMSFindings}. Finally, a brief discussion of both biomechanical and perception limitations in \ref{rateLimits} concludes this chapter.
 
 \subsection{Terminology} \label{SMSTerms}
-The main method of data collection for SMS tap based tests involve calculation of the time delta between the tap and event onset, called the \textit{asynchrony}. Within the context of this work it shall be defined as:
+The main method of data collection for SMS tap-based tests involve calculation of the time delta between the tap and event onset, called the \textit{asynchrony}. Within the context of this work it shall be defined as:
 \begin{equation*}Tap Onset-True Onset\end{equation*} 
 
 The mean of this asynchrony is typically negative (\textit{NMA}), indicative of the participants anticipation of the beat rather than reaction. Positive asynchronies imply a reactive approach thereby unfavorable within the context of this work. The standard deviation of the asynchrony, $SD_{asy}$, is an index of stability; lower values indicative of a better level of synchronization \cite{repp2013sensorimotor}. For the purposes of this research, $SD_{asy}$ is predominantly shown superimposed onto bar charts.
