--- a/Thesis/thesis-method.tex
+++ b/Thesis/thesis-method.tex
@@ -98,7 +98,7 @@ All tracks were rendered using the digital audio workstation (DAW) \textit{Logic
     \label{fig:modClick}
 \end{figure}
 
-\textbf{A1b} and \textbf{A3b} however required a swing or legato type of chime in order to convey filling the interstitial space. To capture this effect the Klopfgeist tonality was increased to unity and tuned -27 semitones lower which served to both soften diminish the discrete click and provide an elongated or continuous audible sensation. To give the impression of a sound that was ramping up in amplitude and decaying after the peak, a sawtooth wave was added to the signal chain as shown in Figure \ref{fig:modClick}. Last, a multi-band EQ was placed at the end of the signal chain with a bandpass filter from 95Hz-750Hz removing any unwanted frequency presence with a 3.5dB high-Q peak at 220Hz to emphasize the tonality.
+\textbf{A1b} and \textbf{A3b} however required a swing or legato type of chime in order to convey filling the interstitial space. To capture this effect the Klopfgeist tonality was increased to unity and tuned 27 semitones lower which served to soften and diminish the discrete click as well as provide an elongated or continuous audible sensation. To give the impression of a sound that was ramping up in amplitude and decaying after the peak, a sawtooth wave was added to the signal chain as shown in Figure \ref{fig:modClick}. Lastly, a multi-band EQ was placed at the end of the signal chain with a bandpass filter from 95Hz-750Hz removing any unwanted frequency presence with a 3.5dB high-Q peak at 220Hz to emphasize the tonality.
 
 The resultant waveform encapsulated the occupation of the interstitial space. A comparison of this waveform in contrast to it's discrete counterpart is shown in \ref{fig:click_comparison}. Note the envelope of signal (b) follows a natural build up and decay.
 
@@ -143,7 +143,7 @@ Dynamic manipulation of tempo was accomplished in \textit{Logic Pro X} through a
 
 \begin{figure}[H]
     \centering
-    \caption{Dynamic audio tempo automation patterns}
+    \caption{Dynamic audio tempo automation patterns based on an 8 bar section}
         \subfloat[45 +/- 15]{\includegraphics[width=.5\columnwidth]{dynamic_45}}
         \subfloat[90 +/- 15]{\includegraphics[width=.5\columnwidth]{dynamic_90}}
         \qquad
