--- a/Thesis/thesis-priorWork.tex
+++ b/Thesis/thesis-priorWork.tex
@@ -27,9 +27,9 @@ This research gave insight into training with haptic stimuli alone, and is a str
 \section{Vibrotactile Metronome} \label{vibrotactileMetronome}
 The \textit{Vibrotactile Metronome} is the current thesis project of Patrick Ignoto of the Centre for Interdisciplinary Research in Music Media and Technology (CIRMMT) program at McGill University.
 
-The work has some fascinating parallels to this project and has granted some very tangible insights towards testing and overall procedure. Patrick’s overall goal was to propose a device which uses tactile sense to provide similar functionality to a click track as it’s used for a contemporary classical music conductor with the added benefit of not blocking the ear or interfering with the conductors perception \cite{ignoto2017development}.
+The work has some fascinating parallels to this project and has granted some very tangible insights towards testing and overall procedure. Patrick\textsc{\char13}s overall goal was to propose a device which uses tactile sense to provide similar functionality to a click track as it is used for a contemporary classical music conductor with the added benefit of not blocking the ear or interfering with the conductor\textsc{\char13}s perception \cite{ignoto2017development}.
 
-The haptic design consisted of two ERM’s and one pager buzzer. A transmitter was connected to a PC running the visual programming language Max. Real-time audio analysis of the incoming signal was completed using the bonk~ object to find downbeats. This triggered the generation of the vibrotactile envelope signal and a control message was transmitted to the device. The pulses were to feel continuous and not discrete, mimicking that of a pendulum motion. The pulses peak amplitude had to line up with the audio track. To synchronize with the audio click he triggered the haptic pulse midway between two audio clicks.
+The haptic design consisted of two eccentric rotating mass motors and one pager buzzer. A transmitter was connected to a PC running the visual programming language Max. Real-time audio analysis of the incoming signal was completed using the \textit{bonk~} object to find downbeats. This triggered the generation of the vibrotactile envelope signal and a control message was transmitted to the device. The pulses were to feel continuous and not discrete, mimicking that of a pendulum motion. The pulse\textsc{\char13}s peak amplitude had to line up with the audio track. To synchronize with the audio click he triggered the haptic pulse midway between two audio clicks.
 
 At the end of the proposal, the real-time setup was migrated to post-processing in Matlab since the hardware was having trouble in keeping up with the buffering. Not much insight was given as to how the vibrotactile waveform was shaped; it is assumed that some level of motor control was involved.
 
@@ -37,7 +37,7 @@ At the end of the proposal, the real-time setup was migrated to post-processing 
 In a novel advancement challenging the auditory advantage and perhaps paving the way towards a more meaningful gesture, researchers in the Psychology department at Sun Yat-Sin University in Guangdong found continuous motion of a bouncing ball to be as stable as synchronization to an auditory metronome
 ~\cite{gan2015synchronization}.
 
-Stability of beat synchronization to discrete visual modalities, such as a flash of light, had been previously shown to be less stable that its auditory counterpart. However, the design and impact of a continuous visual metronome had yet to be explored. The team designed a visual bouncing ball simulation which manipulated acceleration animation to fit the IOI desired. Participants were instructed to tap to the bottom position of the bounce. Results for the bouncing ball visual were nearly equivalent to the auditory control tests. The research carried out by this group was direct motivation to expand this project into the tactile modality.
+Stability of beat synchronization to discrete visual modalities, such as a flash of light, had been previously shown to be less stable than their auditory counterpart. However, the design and impact of a continuous visual metronome had yet to be explored. The team designed a visual bouncing ball simulation which manipulated acceleration animation to fit the IOI desired. Participants were instructed to tap to the bottom position of the bounce. Results for the bouncing ball visual were nearly equivalent to the auditory control tests. The research carried out by this group was direct motivation to expand this project into the tactile modality.
 
 \subsection{Commercial Introspection} \label{commercial}
 The Peterson tuner BodyBeat Sync (\$140) seeks to revolutionize the traditional metronome through its extensive coverage of all three modalities with a wearable pulsing vibration unit which claims to “allow musicians to easily internalize the beat and develop a note value relationship both audibly and physically” \cite{Peterson}.
