--- a/Thesis/thesis-abstract.tex
+++ b/Thesis/thesis-abstract.tex
@@ -8,7 +8,7 @@
 
 The following work is an expansion of sensorimotor synchronization research. It provides an evaluation of the intervening space between the beat as it applies to the modalities of touch and sound. The crux of the experiment is a tap test comparison of continuous and discrete impulses over static (isochronous) and dynamic (non-isochronous) pulse intervals. 
 
-Time based response metrics of a wearable haptic are contrasted to a suite of audible tests. Though vast evidence promotes an auditory advantage in guiding rhythmic accuracy and low asynchrony, this work hypothesizes a haptic benefit when the dynamically changing beat is occupied with a continuous wave across the modality of touch. 
+Time-based response metrics of a wearable haptic are contrasted to a suite of audible tests. Though vast evidence promotes an auditory advantage in guiding rhythmic accuracy and low asynchrony, this work hypothesizes a haptic benefit when the dynamically changing beat is occupied with a continuous wave across the modality of touch. 
 
 The analysis of 16 subjects (8 professionals, 8 amateur and non-musicians) resulted in favorable results for the haptic device during the dynamic test cases as contrasted to the auditory test results. Though the auditory modality yielded the best results for the isochronous test cases, the haptic device won out for non-isochronous or dynamically changing beats with a much cleaner standard deviation. This implies a greater synchronization ability with the haptic device and strongly supports the hypothesis of this work.
 
