--- a/Thesis/thesis-dataAnalysis.tex
+++ b/Thesis/thesis-dataAnalysis.tex
@@ -17,15 +17,14 @@ The instrumental breakdown can be seen in Figure \ref{fig:pieInst} below.
     \label{fig:pieInst}
 \end{figure}
 Thirteen users had some sort of prior experience with an audible metronome and three did not. For most this was their first experience with a haptic device. All users chose their dominant arm to wear the haptic sleeve and chose their dominant hand for tapping.
-\subsection{Setup} \label{testSetup}
-To initialize setup, the subject is seated and given a pair of closed-back headphones. The FSR is situated to their preference and secured into place. Unlike a keyboard or button the FSR gives little to no feedback or rebound. This ensures a confident tap on each onset while providing no tactile response. The approach seeks to avoid intrinsic lag due to its independence of mechanical components. The delay limit is defined by the threshold applied in the software to avoid debounce, as discussed in Section \ref{development}
-
 \begin{figure}[H]
     \centering
     \includegraphics[width=\columnwidth]{TestSuiteFlowDiagram}
     \caption{Test Suite Flow Chart}
     \label{fig:TestSuiteFlowDiagram}
 \end{figure}
+\subsection{Setup} \label{testSetup}
+To initialize setup, the subject is seated and given a pair of closed-back headphones. The FSR is situated to their preference and secured into place. Unlike a keyboard or button the FSR gives little to no feedback or rebound. This ensures a confident tap on each onset while providing no tactile response. The approach seeks to avoid intrinsic lag due to its independence of mechanical components. The delay limit is defined by the threshold applied in the software to avoid debounce, as discussed in Section \ref{development}
 
 The Python file \textit{testSuite.py} is run and the UI will prompt the subject to input their name, read the instructions, agree to the conditions of the test suite, and commence with the test. The first 8 are practice tests to get used to the haptic sensation as well as the variety of audible test cases. The order of test case execution is scrambled with a static seed pseudo-random generator such that every user encounters the same test order. Every iteration of the test plots the Tap Onset, True Onset, and Sanitized Onset  for the purposes of feedback and affirmation of correct tapping as seen in Figure \ref{fig:TestCaseFeedbackEx}. Upon completion of the 48 test cases, the users are asked to fill out a survey for feedback.
 
@@ -134,7 +133,6 @@ The dynamic audible click had a mean asynchrony of $-$67.84 $+/-$ 152.39 while t
 \subsection{Analysis of variance across test cases}
 
 To confirm the significance of the differences found between haptic and audible tests, an independent t-test with unequal variance was conducted. The null hypothesis was the assumption of no difference between these test case types in the latency corrected sanitized asynchrony value. P-values were obtained for haptic versus audible test case combinations across the static and dynamic groupings. The results are summarized in Figure \ref{fig:pvalue}.
-
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{StaticP}
@@ -142,15 +140,17 @@ To confirm the significance of the differences found between haptic and audible 
     \caption{T-Test Results}
     \label{fig:pvalue}
 \end{figure}
-\pagebreak
+The extremely small p-value in both cases represents an overall success in negating the null hypothesis within a 95 percent confidence interval. This confirms that the variance of results between the static and dynamic tests cases for haptic and audible tests are indeed statistically significant and are not due to chance.
+
 \section{Feedback}
+On a scale of 1 to 10, with 10 being the most difficult, approximately 70\% of those tested found synchronization to the steady audible beat to be a level of 1, or extremely easy. The remaining 30\% found it to be either a 2 or 4 level of difficulty. However, the spread for dynamic audio test cases was much wider ranged, with the majority expressing a high level of difficulty 81.3\% above level 5 seen in Figure \ref{fig:Auddiff}. 
 \begin{figure}[H]
     \centering
     \includegraphics[width=\columnwidth]{Auddiff}
     \caption{Questionnaire: Difficulty results for dynamic audible tests.}
     \label{fig:Auddiff}
 \end{figure}
-On a scale of 1 to 10, with 10 being the most difficult, approximately 70\% of those tested found synchronization to the steady audible beat to be a level of 1, or extremely easy. The remaining 30\% found it to be either a 2 or 4 level of difficulty. However, the spread for dynamic audio test cases was much wider ranged, with the majority expressing a high level of difficulty 81.3\% above level 5 seen in Figure \ref{fig:Auddiff}. The haptic tests had a wider difficulty spread across the steady beat shown at the top of Figure \ref{fig:Hapdiff}. This was to be expected as users had no prior experience with this haptic device let alone any other sort of wearable metronome. If retested or trained over the course of a few weeks to the sensation of touch the responses might have been more favorable or closer in resemblance to the static audible tests. Regardless, the dynamic beat for the haptic modality yielded less difficulty rankings than the dynamic audible (11 ranked a level of 5 or more difficulty vs. 13 for audible dynamic tests), which further supports the hypothesis of this work.
+The haptic tests had a wider difficulty spread across the steady beat shown at the top of Figure \ref{fig:Hapdiff}. This was to be expected as users had no prior experience with this haptic device let alone any other sort of wearable metronome. If retested or trained over the course of a few weeks to the sensation of touch the responses might have been more favorable or closer in resemblance to the static audible tests. Future experiments could involve a retest of participants after an acclimation period to determine whether adaptation to the haptic sensation prevailed. Regardless, the dynamic beat for the haptic modality yielded less difficulty rankings than the dynamic audible (11 ranked a level of 5 or more difficulty vs. 13 for audible dynamic tests), which further supports the hypothesis of this work.
 \begin{figure}[H]
     \centering
     \includegraphics[width=\columnwidth]{Hapdiff}
